syntax = "proto3";

package api.auth.v1;

import "google/api/annotations.proto";
import "openapi/v3/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "v1/common/user.proto";
import "v1/common/common.proto";

option go_package = "github/invokerw/gintos/demo/api/v1/admin;admin";


service Admin {
	// 登录
	rpc GetUserList (GetUserListRequest) returns (GetUserListResponse) {
		option (google.api.http) = {
			post: "/admin/v1/get_user_list"
			body: "*"
		};

		option(openapi.v3.operation) = {
			security: {}
		};
	}
}

message GetUserListRequest {
	common.v1.PageInfo page = 1 [
		json_name = "page",
		(openapi.v3.property) = {description: "分页信息"}
	]; // 分页信息
	optional string username = 2 [
		json_name = "username",
		(openapi.v3.property) = {description: "登录名"}
	]; // 登录名
	optional string nickname = 3 [
		json_name = "nickname",
		(openapi.v3.property) = {description: "昵称"}
	]; // 昵称
}

message GetUserListResponse {
	repeated common.v1.User users = 1;
}
